@startuml ERD
entity "Users" as U {
  + id : UUID [PK]
  --
  username : string
  email : string [UNIQUE]
  password_hash : string
  avatar_url : string
  otp_secret : string
  is_email_verified : boolean
  role : enum(admin, user)
  created_at : timestamp
  updated_at : timestamp
}

entity "Cages" as C {
  + id : UUID [PK]
  --
  name : string
  user_id : UUID [FK -> Users.id]
  status : enum(inactive, active)
  num_device : integer
  created_at : timestamp
  updated_at : timestamp
}

entity "Sensors" as S {
  + id : UUID [PK]
  --
  name : string
  type : enum(temperature, humidity, light, distance)
  value : float
  unit : string
  cage_id : UUID [FK -> Cages.id]
  created_at : timestamp
  updated_at : timestamp
}

entity "Statistic" as STT{
  + id : UUID [PK]
  --
  cage_id : UUID [FK -> Cages.id]
  water_refill_sl : int
  create_at : timestamp
  updated_at : timestamp
}

entity "Devices" as D {
  + id : UUID [PK]
  --
  name : string
  type : enum(display, lock, light, pump, fan)
  status : enum(on, off, auto)
  last_status : enum(on, off, auto) 
  cage_id : UUID [FK -> Cages.id]
  created_at : timestamp
  updated_at : timestamp
}

entity "AutomationRules" as AR {
  + id : UUID [PK]
  --
  sensor_id : UUID [FK -> Sensors.id]
  device_id : UUID [FK -> Devices.id]
  cage_id : UUID [FK -> Cages.id]
  condition : enum(>, <, =)
  threshold : float
  action : enum(turn_on, turn_off, refill, lock)
  created_at : timestamp
  updated_at : timestamp
}


entity "Notifications" as N {
  + id : UUID [PK]
  --
  user_id : UUID [FK -> Users.id]
  cage_id : UUID [FK -> Cages.id]
  type : enum('info', 'warning', 'error')
  title : string 
  message : string
  is_read : boolean
  created_at : timestamp
}

entity "OTPRequests" as O {
  + id : UUID [PK]
  --
  user_id : UUID [FK -> Users.id]
  otp_code : string
  expires_at : timestamp
  is_used : boolean
  created_at : timestamp
}

entity "RefreshTokens" as RT {
  + id : UUID [PK]
  --
  user_id : UUID [FK -> Users.id]
  token : string
  expires_at : timestamp
  created_at : timestamp
}

entity "Settings" as SET {
  + cage_id : UUID [PK, FK -> Cages.id]
  --
  high_water_usage_threshold : integer
  created_at : timestamp
  updated_at : timestamp
}

U ||--o{ C : "owns"
C ||--o{ S : "has"
C ||--o{ D : "has"
C ||--o{ STT : "collects"
S ||--o{ AR : "triggers"
D ||--o{ AR : "controlled by"
U ||--o{ N : "receives"
U ||--o{ O : "requests"
U ||--o{ RT : "issues"
C ||--|| SET : "has setting"
@enduml
